--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ Tasks that can be accomplished with this package include:
 * Error visualization with `errorPlot_dl`, `errorPlot_fields`, and `errorPlot_states`
 * Exploration of specific errors with `youthHunters` and `outOfStateHunters`
 * Detailed error reporting with `errorTable`, `pullErrors`, and `redFlags`
-* Automated report writing with `writeReport` and `writeShiny`
+* Automated report writing with `writeReport` 
 * Custom .csv writing with `write_hip`
 
 ## Installation
