--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -266,7 +266,7 @@ errorPlot_fields(proofed_data, year = params$year)
 
 ### After correction
 
-```{r erpf_c, echo = FALSE, fig.align = "center"}
+```{r erpf_c, echo = FALSE, fig.align = "center", warning = FALSE}
 
 # Get the order of the fields so that they match the plot above
 x_order <-
