--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -363,13 +363,25 @@ DT::datatable(et)
 Values associated with error in `r et$error[1]`
 
 ```{r pe_1, echo = FALSE}
-err1 <- 
-  pullErrors(proofed_data, error = et$error[1], distinct = FALSE) %>% 
-  as_tibble() %>% 
-  group_by(value) %>% 
-  summarize(count = n()) %>% 
-  ungroup() %>% 
-  arrange(desc(count))
+
+if(et$error[1] != "birth_date"){
+  err1 <- 
+    pullErrors(proofed_data, error = et$error[1], distinct = FALSE) %>% 
+    as_tibble() %>% 
+    group_by(value) %>% 
+    summarize(count = n()) %>% 
+    ungroup() %>% 
+    arrange(desc(count))
+  }else{
+  err1 <- 
+    pullErrors(proofed_data, error = et$error[1], distinct = FALSE) %>% 
+    as_tibble() %>% 
+    mutate(value = str_extract(value, ".{4}$")) %>% 
+    group_by(value) %>% 
+    summarize(count = n()) %>% 
+    ungroup() %>% 
+    arrange(desc(count))
+}
 
 DT::datatable(err1)
 ```
@@ -377,13 +389,25 @@ DT::datatable(err1)
 Values associated with error in `r et$error[2]`
 
 ```{r pe_2, echo = FALSE}
-err2 <- 
-  pullErrors(proofed_data, error = et$error[2], distinct = FALSE) %>% 
-  as_tibble() %>% 
-  group_by(value) %>% 
-  summarize(count = n()) %>% 
-  ungroup() %>% 
-  arrange(desc(count))
+
+if(et$error[2] != "birth_date"){
+  err2 <- 
+    pullErrors(proofed_data, error = et$error[2], distinct = FALSE) %>% 
+    as_tibble() %>% 
+    group_by(value) %>% 
+    summarize(count = n()) %>% 
+    ungroup() %>% 
+    arrange(desc(count))
+  }else{
+  err2 <- 
+    pullErrors(proofed_data, error = et$error[2], distinct = FALSE) %>% 
+    as_tibble() %>% 
+    mutate(value = str_extract(value, ".{4}$")) %>% 
+    group_by(value) %>% 
+    summarize(count = n()) %>% 
+    ungroup() %>% 
+    arrange(desc(count))
+}
 
 DT::datatable(err2)
 ```
@@ -391,13 +415,25 @@ DT::datatable(err2)
 Values associated with error in `r et$error[3]`
 
 ```{r pe_3, echo = FALSE}
-err3 <- 
-  pullErrors(proofed_data, error = et$error[3], distinct = FALSE) %>% 
-  as_tibble() %>% 
-  group_by(value) %>% 
-  summarize(count = n()) %>% 
-  ungroup() %>% 
-  arrange(desc(count))
+
+if(et$error[3] != "birth_date"){
+  err3 <- 
+    pullErrors(proofed_data, error = et$error[3], distinct = FALSE) %>% 
+    as_tibble() %>% 
+    group_by(value) %>% 
+    summarize(count = n()) %>% 
+    ungroup() %>% 
+    arrange(desc(count))
+  }else{
+  err3 <- 
+    pullErrors(proofed_data, error = et$error[3], distinct = FALSE) %>% 
+    as_tibble() %>% 
+    mutate(value = str_extract(value, ".{4}$")) %>% 
+    group_by(value) %>% 
+    summarize(count = n()) %>% 
+    ungroup() %>% 
+    arrange(desc(count))
+}
 
 DT::datatable(err3)
 ```
