writeReport function: fixed duplicated chunk

--- a/inst/templates/season_report.Rmd
+++ b/inst/templates/season_report.Rmd
@@ -418,7 +418,7 @@ DT::datatable(canada_records)
 
 ## Out-of-state hunters
 
-```{r oosh, echo = FALSE}
+```{r canadians, echo = FALSE}
 outOfStateHunters(proofed_data)
 ```
 
